Add example for transactions

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(minimal minimal.cpp)
-target_link_libraries(minimal couchbase_cxx_client::couchbase_cxx_client
-                      taocpp::json)
+target_link_libraries(minimal
+    PRIVATE couchbase_cxx_client::couchbase_cxx_client taocpp::json)
+
+add_executable(transactions_basic_transfer transactions_basic_transfer.cpp)
+target_link_libraries(transactions_basic_transfer
+    PRIVATE couchbase_cxx_client::couchbase_cxx_client taocpp::json)
