Add query example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,6 +6,10 @@ add_executable(minimal_query minimal_query.cpp)
 target_link_libraries(minimal_query
     PRIVATE couchbase_cxx_client::couchbase_cxx_client taocpp::json)
 
+add_executable(minimal_search minimal_search.cpp)
+target_link_libraries(minimal_search
+    PRIVATE couchbase_cxx_client::couchbase_cxx_client taocpp::json)
+
 add_executable(transactions_transfer_basic transactions_transfer_basic.cpp)
 target_link_libraries(transactions_transfer_basic
     PRIVATE couchbase_cxx_client::couchbase_cxx_client taocpp::json)
