update examples to 1.0.4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,22 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(fmt REQUIRED)
-find_package(couchbase_cxx_client REQUIRED)
+find_package(couchbase_cxx_client)
 
 if (couchbase_cxx_client_FOUND)
   find_package(taocpp-json REQUIRED)
 else()
+  set(LATEST_COUCHBASE_CXX_CLIENT 1.0.4)
+
   include(cmake/CPM.cmake)
 
   cpmaddpackage(
     NAME
     couchbase_cxx_client
     GIT_TAG
-    1.0.1
+    ${LATEST_COUCHBASE_CXX_CLIENT}
     VERSION
-    1.0.1
+    ${LATEST_COUCHBASE_CXX_CLIENT}
     GITHUB_REPOSITORY
     "couchbase/couchbase-cxx-client"
     OPTIONS
