--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,27 @@ project(couchbase_cxx_client_demo CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-include(cmake/CPM.cmake)
+find_package(fmt REQUIRED)
+find_package(couchbase_cxx_client)
 
-cpmaddpackage(
-  NAME
-  couchbase_cxx_client
-  GIT_TAG
-  1.0.1
-  VERSION
-  1.0.1
-  GITHUB_REPOSITORY
-  "couchbase/couchbase-cxx-client"
-  OPTIONS
-  "COUCHBASE_CXX_CLIENT_STATIC_BORINGSSL ON")
+if (couchbase_cxx_client_FOUND)
+  find_package(taocpp-json REQUIRED)
+else()
+  set(LATEST_COUCHBASE_CXX_CLIENT 1.0.4)
+
+  include(cmake/CPM.cmake)
+
+  cpmaddpackage(
+    NAME
+    couchbase_cxx_client
+    GIT_TAG
+    ${LATEST_COUCHBASE_CXX_CLIENT}
+    VERSION
+    ${LATEST_COUCHBASE_CXX_CLIENT}
+    GITHUB_REPOSITORY
+    "couchbase/couchbase-cxx-client"
+    OPTIONS
+    "COUCHBASE_CXX_CLIENT_STATIC_BORINGSSL ON")
+endif()
 
 add_subdirectory(examples)
